construccion del header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>atlas</title>
 </head>
 <body>
-    
+    <header>
+        <div class="containerHeader">
+            <h1 id="h1Header">A New Way <br>To Star Business</h1>
+        </div>
+    </header>
+    <nav>
+
+    </nav>
+    <main>
+        <section>
+
+        </section>
+    </main>
+    <footer>
+            
+    </footer>
 </body>
 </html>
