actualizacion final del dia 20/05/2024

--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
 </head>
 <body>
     <header>
+        <div id="logo">
+            <p id="logo1Header">Get Early Access</p>
+            <img src="assets/imagenes/logo.png" alt="logo" id="logoHeader2">
+        </div>
         <div class="containerHeader">
             <h1 id="h1Header">A New Way <br>To Star Business</h1>
+            <p id="textoHeader">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolorem vitae necessitatibus repudiandae magnam accusamus corporis tenetur magni repellendus impedit consectetur, similique itaque omnis. Perspiciatis inventore harum impedit modi illo?</p>
+            <button id="btnHeader"> <h5>Get Started </h5></button>
         </div>
     </header>
     <nav>
-
+        <h1 id="tituloNav">Smartest Protection For Your Site</h1>
+    <div id="imgNav">
+        <img src="assets/imagenes/smart-protect-1.jpg" alt="imagen"> 
+        <img src="assets/imagenes/smart-protect-2.jpg" alt="imagen">
+        <img src="assets/imagenes/smart-protect-3.jpg" alt="imagen">
+    </div>
     </nav>
     <main>
         <section>
