--- a/index.html
+++ b/index.html
@@ -19,15 +19,39 @@
         </div>
     </header>
     <nav>
-        <h1 id="tituloNav">Smartest Protection For Your Site</h1>
-        <div id="imgNav">
-        <img src="assets/imagenes/smart-protect-1.jpg" alt="imagen"> 
-        <img src="assets/imagenes/smart-protect-2.jpg" alt="imagen">
-        <img src="assets/imagenes/smart-protect-3.jpg" alt="imagen">
-        </div>
+        <section class="section1-2">
+            <h1 id="titleNav">hola</h1>
+            <div id="imgs-div">
+                <img src="assets/imagenes/smart-protect-1.jpg" alt="Anti-span" id="imgs2">
+                <img src="assets/imagenes/smart-protect-2.jpg" alt="CSS3" id="imgs2">
+                <img src="assets/imagenes/smart-protect-3.jpg" alt="Diseño Grafico" id="imgs2">
+            </div>
+                <section class="titles-sect1-2">
+                    <h1 id="html_word">Anti-span</h1>
+                    <h1 id="css_word">CSS3</h1>
+                    <h1 id="brush_word">Diseño Grafico</h1>
+                </section>
+                <section class="lorem-sect1-2">
+                <p id="sect2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Distinctio aliquid natus dolore beatae accusamus ducimus,
+                    Perferendis quae accusamus sunt sapiente ipsum 
+                </p>
+                <p id="sect2">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Veniam iste fugit unde corrupti doloremque perferendis 
+                    tempora veritatis eum aliquid, eius?
+                </p>
+                <p id="sect2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Alias, est voluptates sequi ratione ea ab nobis? Repellat 
+                    sit deleniti quo suscipit voluptatem.
+                </p>
+                </section>
+        </section>
     </nav>
     <main>
-        <section>
+        <section id="section1">
+
+        </section>
+        <section id="section1">
 
         </section>
     </main>
