--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <nav>
         <section class="section1-2">
-            <h1 id="titleNav">hola</h1>
+            <h1 id="titleNav">Smartest Protection For Your Site</h1>
             <div id="imgs-div">
                 <img src="assets/imagenes/smart-protect-1.jpg" alt="Anti-span" id="imgs2">
                 <img src="assets/imagenes/smart-protect-2.jpg" alt="CSS3" id="imgs2">
@@ -28,8 +28,8 @@
             </div>
                 <section class="titles-sect1-2">
                     <h1 id="html_word">Anti-span</h1>
-                    <h1 id="css_word">CSS3</h1>
-                    <h1 id="brush_word">Diseño Grafico</h1>
+                    <h1 id="css_word">psiqui detec</h1>
+                    <h1 id="brush_word">smarcant</h1>
                 </section>
                 <section class="lorem-sect1-2">
                 <p id="sect2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -49,10 +49,15 @@
     </nav>
     <main>
         <section id="section1">
-
+            <h1>Take a look inside</h1> <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architecto dicta, eveniet rem saepe ducimus ipsam? Repudiandae provident fuga dicta repellat ea.</p>
+            <button>learn more</button>
+            
         </section>
         <section id="section1">
-
+            <h1>Take a look inside</h1> <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architecto dicta, eveniet rem saepe ducimus ipsam? Repudiandae provident fuga dicta repellat ea.</p>
+            <button>learn more</button>
         </section>
     </main>
     <footer>
