raparacion de errores vession anterior

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div id="logo">
-            <p id="logo1Header">Get Early Access</p>
             <img src="assets/imagenes/logo.png" alt="logo" id="logoHeader2">
+            <p id="logo1Header">Get Early Access</p>
         </div>
         <div class="containerHeader">
             <h1 id="h1Header">A New Way <br>To Star Business</h1>
@@ -49,17 +49,26 @@
     </nav>
     <main>
         <section id="section1">
-            <h1>Take a look inside</h1> <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architecto dicta, eveniet rem saepe ducimus ipsam? Repudiandae provident fuga dicta repellat ea.</p>
-            <button>learn more</button>
-            
+            <div id="secion1-div">
+                <h1>Take a look inside</h1> <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architec</p>
+                <button id="botonsec1">learn more</button>
+            </div>
+            <img src="assets/imagenes/feature-1.png" alt="Anti-span" >
         </section>
         <section id="section1">
-            <h1>Take a look inside</h1> <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architecto dicta, eveniet rem saepe ducimus ipsam? Repudiandae provident fuga dicta repellat ea.</p>
-            <button>learn more</button>
+            <img src="assets/imagenes/feature-2.png" alt="Anti-span" >
+            <div id="secion1-div">
+                <h1>Take a look inside</h1> <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architec.</p>
+                <button id="botonsec1">learn more</button>
+            </div>
         </section>
     </main>
+    <section class="section2">
+        <h1>Take a look inside</h1> <br>
+
+    </section>
     <footer>
             
     </footer>
