terminacion de la seccion 2

--- a/index.html
+++ b/index.html
@@ -66,8 +66,37 @@
         </section>
     </main>
     <section class="section2">
-        <h1>Take a look inside</h1> <br>
-
+        <h1 id="seccion2-h1">Check our pricing</h1> 
+    <div class="containerSec2">
+        
+        <div id="sec2Tex">
+            <h2>Startup</h2> <br>
+            <img src="assets/imagenes/numero1.png" alt="imgen1"><br>
+            <h4>up to 5 Documents</h4><br>
+            <h4>up to 3 reviews</h4><br>
+            <h4>5 team Members</h4><br>
+            <h4>limti suport</h4> <br>
+            <button id="botonSec2">Get free</button>
+        </div>
+        <div id="sec2TexN">
+            <h2>Premiun</h2> <br>
+            <img src="assets/imagenes/numero2.png" alt="imgen1"><br>
+            <h4>up to 5 Documents</h4><br>
+            <h4>up to 3 reviews</h4><br>
+            <h4>5 team Members</h4><br>
+            <h4>limti suport</h4><br>
+            <button id="btnHeader">Get free</button>
+        </div>
+        <div id="sec2Tex">
+            <h2>Proffecional</h2><br>
+            <img src="assets/imagenes/numero3.png" alt="imgen1"><br>
+            <h4>up to 5 Documents</h4><br>
+            <h4>up to 3 reviews</h4><br>
+            <h4>5 team Members</h4><br>
+            <h4>limti suport</h4> <br>
+            <button id="botonSec2">Get free</button>
+        </div>
+    </div>
     </section>
     <footer>
             
