actualizacion de progreso

--- a/index.html
+++ b/index.html
@@ -98,8 +98,43 @@
         </div>
     </div>
     </section>
+    <section class="section3">
+        <img src="assets/imagenes/client-1.png" alt="imagen1">
+        <img src="assets/imagenes/client-2.png" alt="imagen2">
+        <img src="assets/imagenes/client-3.png" alt="imagen3">
+        <img src="assets/imagenes/client-4.png" alt="imagen4">
+        <img src="assets/imagenes/client-5.png" alt="imagen5">
+        <img src="assets/imagenes/client-6.png" alt="imagen6">
+    </section>
+    <section class="section4">
+        <section class="inputs">
+        <div>
+            <p>your name</p>
+            <input type="text" id="nombre">
+            <p>your Email</p>
+            <input type="email" id="e-mail">
+            <form id="txt-area"></form>
+        </div>
+        <div>
+            <p>Message</p>
+            <textarea rows="5" cols="50" id="txt_area"></textarea><br><br>
+            </form>
+            <button id="btn-sec4">Enviar</button>
+        </div>
+        </section>
+        <div class="contac-div">
+            <h1>contac</h1> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ullam illo, perferendis molestias rem culpa repellat facere, tempora ratione fugiat eveniet dicta dignissimos provident! Laudantium ipsum ea inventore natus vitae.</p>
+        </div>
+    </section>
     <footer>
-            
+        <p>Copyright © 2023. All rights reserved.</p> 
+        <div id="Acceso-redes">
+        <a href="https://www.facebook.com/?locale=es_LA"> <img src="assets/imagenes/facebook.png" alt=""> </a>
+        <a href="https://www.youtube.com/"> <img src="assets/imagenes/youtube.png" alt=""> </a> 
+        <a href="https://www.tiktok.com/es/"> <img src="assets/imagenes/tiktok.png" alt=""> </a> 
+        <a href="https://www.instagram.com/"> <img src="assets/imagenes/instagram+.png" alt=""> </a>
+        </div>
     </footer>
 </body>
 </html>
