--- a/index.html
+++ b/index.html
@@ -108,15 +108,18 @@
     </section>
     <section class="section4">
         <section class="inputs">
-        <div>
-            <p>your name</p>
-            <input type="text" id="nombre">
-            <p>your Email</p>
-            <input type="email" id="e-mail">
-            <form id="txt-area"></form>
+        <div id="datos">
+            <div>
+            <p id="color1" >your name</p>
+            <input type="text" id="color">
+            </div>
+            <div id="espacio">
+            <p id="color1">your Email</p>
+            <input type="email" id="color">
+            </div>
         </div>
         <div>
-            <p>Message</p>
+            <p id="color1">Message</p>
             <textarea rows="5" cols="50" id="txt_area"></textarea><br><br>
             </form>
             <button id="btn-sec4">Enviar</button>
