--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/css/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>atlas</title>
 </head>
 <body>
@@ -54,10 +54,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architec</p>
                 <button id="botonsec1">learn more</button>
             </div>
-            <img src="assets/imagenes/feature-1.png" alt="Anti-span" >
+            <img src="styles/assets/imagenes/feature-1.png" alt="Anti-span" >
         </section>
         <section id="section1">
-            <img src="assets/imagenes/feature-2.png" alt="Anti-span" >
+            <img src="styles/assets/imagenes/feature-2.png" alt="Anti-span" >
             <div id="secion1-div">
                 <h1>Take a look inside</h1> <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architec.</p>
@@ -71,7 +71,7 @@
         
         <div id="sec2Tex">
             <h2>Startup</h2> <br>
-            <img src="assets/imagenes/numero1.png" alt="imgen1"><br>
+            <img src="styles/assets/imagenes/numero1.png" alt="imgen1"><br>
             <h4>up to 5 Documents</h4><br>
             <h4>up to 3 reviews</h4><br>
             <h4>5 team Members</h4><br>
@@ -80,7 +80,7 @@
         </div>
         <div id="sec2TexN">
             <h2>Premiun</h2> <br>
-            <img src="assets/imagenes/numero2.png" alt="imgen1"><br>
+            <img src="styles/assets/imagenes/numero2.png" alt="imgen1"><br>
             <h4>up to 5 Documents</h4><br>
             <h4>up to 3 reviews</h4><br>
             <h4>5 team Members</h4><br>
@@ -89,7 +89,7 @@
         </div>
         <div id="sec2Tex">
             <h2>Proffecional</h2><br>
-            <img src="assets/imagenes/numero3.png" alt="imgen1"><br>
+            <img src="styles/assets/imagenes/numero3.png" alt="imgen1"><br>
             <h4>up to 5 Documents</h4><br>
             <h4>up to 3 reviews</h4><br>
             <h4>5 team Members</h4><br>
