--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="assets/imagenes/logo.png" alt="logo" id="logoHeader2">
+            <img src="styles/imagenes/logo.png" alt="logo" id="logoHeader2">
             <p id="logo1Header">Get Early Access</p>
         </div>
         <div class="containerHeader">
@@ -22,9 +22,9 @@
         <section class="section1-2">
             <h1 id="titleNav">Smartest Protection For Your Site</h1>
             <div id="imgs-div">
-                <img src="assets/imagenes/smart-protect-1.jpg" alt="Anti-span" id="imgs2">
-                <img src="assets/imagenes/smart-protect-2.jpg" alt="CSS3" id="imgs2">
-                <img src="assets/imagenes/smart-protect-3.jpg" alt="Diseño Grafico" id="imgs2">
+                <img src="styles/imagenes/smart-protect-1.jpg" alt="Anti-span" id="imgs2">
+                <img src="styles/imagenes/smart-protect-2.jpg" alt="CSS3" id="imgs2">
+                <img src="styles/imagenes/smart-protect-3.jpg" alt="Diseño Grafico" id="imgs2">
             </div>
                 <section class="titles-sect1-2">
                     <h1 id="html_word">Anti-span</h1>
@@ -54,10 +54,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architec</p>
                 <button id="botonsec1">learn more</button>
             </div>
-            <img src="styles/assets/imagenes/feature-1.png" alt="Anti-span" >
+            <img src="styles/imagenes/feature-1.png" alt="Anti-span" >
         </section>
         <section id="section1">
-            <img src="styles/assets/imagenes/feature-2.png" alt="Anti-span" >
+            <img src="styles/imagenes/feature-2.png" alt="Anti-span" >
             <div id="secion1-div">
                 <h1>Take a look inside</h1> <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architec.</p>
@@ -71,7 +71,7 @@
         
         <div id="sec2Tex">
             <h2>Startup</h2> <br>
-            <img src="styles/assets/imagenes/numero1.png" alt="imgen1"><br>
+            <img src="styles/imagenes/numero1.png" alt="imgen1"><br>
             <h4>up to 5 Documents</h4><br>
             <h4>up to 3 reviews</h4><br>
             <h4>5 team Members</h4><br>
@@ -80,7 +80,7 @@
         </div>
         <div id="sec2TexN">
             <h2>Premiun</h2> <br>
-            <img src="styles/assets/imagenes/numero2.png" alt="imgen1"><br>
+            <img src="styles/imagenes/numero2.png" alt="imgen1"><br>
             <h4>up to 5 Documents</h4><br>
             <h4>up to 3 reviews</h4><br>
             <h4>5 team Members</h4><br>
@@ -89,7 +89,7 @@
         </div>
         <div id="sec2Tex">
             <h2>Proffecional</h2><br>
-            <img src="styles/assets/imagenes/numero3.png" alt="imgen1"><br>
+            <img src="styles/imagenes/numero3.png" alt="imgen1"><br>
             <h4>up to 5 Documents</h4><br>
             <h4>up to 3 reviews</h4><br>
             <h4>5 team Members</h4><br>
@@ -99,12 +99,12 @@
     </div>
     </section>
     <section class="section3">
-        <img src="assets/imagenes/client-1.png" alt="imagen1">
-        <img src="assets/imagenes/client-2.png" alt="imagen2">
-        <img src="assets/imagenes/client-3.png" alt="imagen3">
-        <img src="assets/imagenes/client-4.png" alt="imagen4">
-        <img src="assets/imagenes/client-5.png" alt="imagen5">
-        <img src="assets/imagenes/client-6.png" alt="imagen6">
+        <img src="styles/imagenes/client-1.png" alt="imagen1">
+        <img src="styles/imagenes/client-2.png" alt="imagen2">
+        <img src="styles/imagenes/client-3.png" alt="imagen3">
+        <img src="styles/imagenes/client-4.png" alt="imagen4">
+        <img src="styles/imagenes/client-5.png" alt="imagen5">
+        <img src="styles/imagenes/client-6.png" alt="imagen6">
     </section>
     <section class="section4">
         <section class="inputs">
@@ -133,10 +133,10 @@
     <footer>
         <p>Copyright © 2023. All rights reserved.</p> 
         <div id="Acceso-redes">
-        <a href="https://www.facebook.com/?locale=es_LA"> <img src="assets/imagenes/facebook.png" alt=""> </a>
-        <a href="https://www.youtube.com/"> <img src="assets/imagenes/youtube.png" alt=""> </a> 
-        <a href="https://www.tiktok.com/es/"> <img src="assets/imagenes/tiktok.png" alt=""> </a> 
-        <a href="https://www.instagram.com/"> <img src="assets/imagenes/instagram+.png" alt=""> </a>
+        <a href="https://www.facebook.com/?locale=es_LA"> <img src="styles/imagenes/facebook.png" alt=""> </a>
+        <a href="https://www.youtube.com/"> <img src="styles/imagenes/youtube.png" alt=""> </a> 
+        <a href="https://www.tiktok.com/es/"> <img src="styles/imagenes/tiktok.png" alt=""> </a> 
+        <a href="https://www.instagram.com/"> <img src="styles/imagenes/instagram+.png" alt=""> </a>
         </div>
     </footer>
 </body>
