--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div id="datos">
             <div>
             <p id="color1" >your name</p>
-            <input type="text" id="color">
+            <input type="text" id="color" >
             </div>
             <div id="espacio">
             <p id="color1">your Email</p>
@@ -120,9 +120,9 @@
         </div>
         <div>
             <p id="color1">Message</p>
-            <textarea rows="5" cols="50" id="txt_area"></textarea><br><br>
+            <textarea rows="5" cols="50" id="color"></textarea><br><br>
             </form>
-            <button id="btn-sec4">Enviar</button>
+            <button id="btnHeader" type="submit">Enviar</button>
         </div>
         </section>
         <div class="contac-div">
