--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     <footer>
         <p>Copyright © 2023. All rights reserved.</p> 
         <div id="Acceso-redes">
-        <a href="https://www.facebook.com/?locale=es_LA"> <img src="styles/imagenes/facebook.png" alt=""> </a>
-        <a href="https://www.youtube.com/"> <img src="styles/imagenes/youtube.png" alt=""> </a> 
-        <a href="https://www.tiktok.com/es/"> <img src="styles/imagenes/tiktok.png" alt=""> </a> 
-        <a href="https://www.instagram.com/"> <img src="styles/imagenes/instagram+.png" alt=""> </a>
+        <a href="https://www.facebook.com/?locale=es_LA"> <img src="styles/imagenes/facebook.png" alt="facebook"> </a>
+        <a href="https://www.youtube.com/"> <img src="styles/imagenes/youtube.png" alt="youtube"> </a> 
+        <a href="https://www.tiktok.com/es/"> <img src="styles/imagenes/tiktok.png" alt="tiktok"> </a> 
+        <a href="https://www.instagram.com/"> <img src="styles/imagenes/instagram+.png" alt="instagram"> </a>
         </div>
     </footer>
 </body>
