--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <p id="color1">Message</p>
             <textarea rows="5" cols="50" id="color"></textarea><br><br>
             </form>
-            <button id="btnMessage" type="submit">submit</button>
+            <button id="btn" type="submit">submit</button>
         </div>
         </section>
         <div class="contac-div">
