adaptacion de la pagina completo

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architec</p>
                 <button id="botonsec1">learn more</button>
             </div>
-            <img src="styles/imagenes/feature-1.png" alt="Anti-span" >
+            <img src="styles/imagenes/feature-1.png" alt="Anti-span"  id="imgsec1">
         </section>
         <section id="section1">
-            <img src="styles/imagenes/feature-2.png" alt="Anti-span" >
+            <img src="styles/imagenes/feature-2.png" alt="Anti-span" id="imgsec1" >
             <div id="secion1-div">
                 <h1>Take a look inside</h1> <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, ullam. Maxime dolorem sit reiciendis dolores aperiam ut, architec.</p>
