adaptacion de la pagina completo

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <input type="email" id="color">
             </div>
         </div>
-        <div>
+        <div id="arganizar">
             <p id="color1">Message</p>
             <textarea rows="5" cols="50" id="color"></textarea><br><br>
             </form>
